--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
-PRIVATE_KEY=234523425asdfasdfa
-RPC_URL=http://0.0.0.0:8545
-COINMARKETCAP_API_KEY=asdfasdfasdfasdfasdfasdfasdf
-ETHERSCAN_API_KEY=asdfasdfasdfs
+PRIVATE_KEY=
+OWNER_ADDRESS=
+MAINNET_RPC_URL=
+RINKEBY_RPC_URL=
+COINMARKETCAP_API_KEY=
+ETHERSCAN_API_KEY=
