--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "solidity-coverage": "^0.7.18"
   },
   "dependencies": {
+    "@openzeppelin/contracts": "^4.5.0",
+    "all": "^0.0.0",
     "dotenv": "^14.2.0",
     "prettier-plugin-solidity": "^1.0.0-beta.19"
   },
